--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
   <div id="toast"></div>
 
-  <div class="modal-overlay" id="modalOverlay" onclick="if(event.target === this) window.EventHandler.closeEditModal()">
+  <div class="modal-overlay" id="modalOverlay">
     <div class="modal" onclick="event.stopPropagation()">
       <div class="modal-header">
         <div class="modal-title" id="modalTitle">Edit Card</div>
