Fix edit mode sidebar updates and add dashboard toggle

--- a/index.html
+++ b/index.html
@@ -328,6 +328,8 @@
   </div>
 </header>
 
+  <button class="dashboard-toggle-floating" id="dashboardFloatingToggle" onclick="window.UIRenderer.toggleDashboardBar()"></button>
+
   <div class="app-wrapper">
     <div class="app-content">
       <aside class="sidebar" id="sidebar"></aside>
